[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Basic Shapes/Square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Solid_Shapes/Square_Solid.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Environment/Doors/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 22.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57.5, 83 )

[node name="Door" type="Node2D"]
script = ExtResource( 3 )

[node name="DoorFrame" type="Sprite" parent="."]
scale = Vector2( 0.22216, 0.110078 )
texture = ExtResource( 1 )

[node name="Closed_Door" type="Sprite" parent="."]
scale = Vector2( 0.22216, 0.110078 )
texture = ExtResource( 2 )

[node name="Doorway_Area" type="Area2D" parent="."]

[node name="Doorway_Area_Shape" type="CollisionShape2D" parent="Doorway_Area"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Doorway_Block" type="StaticBody2D" parent="."]

[node name="Doorway_Area_Shape" type="CollisionShape2D" parent="Doorway_Block"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Interact" type="Area2D" parent="."]

[node name="Interact_Shape" type="CollisionShape2D" parent="Interact"]
position = Vector2( -0.5, 1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Doorway_Area" to="." method="_on_Doorway_Area_body_entered"]
[connection signal="body_exited" from="Doorway_Area" to="." method="_on_Doorway_Area_body_exited"]
[connection signal="body_entered" from="Interact" to="." method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_Interact_body_exited"]
[connection signal="mouse_entered" from="Interact" to="." method="_on_Interact_mouse_entered"]
[connection signal="mouse_exited" from="Interact" to="." method="_on_Interact_mouse_exited"]
